# ansible-role-fail2ban

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml  requirements.yml
molecule/default/: molecule.yml
molecule/resources/playbooks/: converge.yml  prepare.yml  verify.yml
tasks/: action.yml  filter.yml  jail.yml  main.yml
templates/: fail2ban.local.j2
